# slivovy_snake

./: Cargo.toml  Makefile  README.md  server.sh
.cargo/: config.toml
.github/workflows/: deploy.yaml
src/: main.rs
src/core/: constants.rs  global.rs  mod.rs  utils.rs
src/plugins/: collision.rs  food.rs  game.rs  game_events.rs  game_flow.rs  input.rs  mod.rs  particle.rs  rendering.rs  snake.rs  ui.rs
web/: index.html
